--- a/assignment3/reservations.html
+++ b/assignment3/reservations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Aggies Coffee House</title>
-    <meta name="author" content="Group#">
+    <meta name="author" content="Davidson">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
@@ -25,7 +25,7 @@
     </main>
 
     <footer>
-        <p> &copy;2024 Aggies Coffee House. All rights reserved</p>
+        <p>&copy;2024 Aggies Coffee House. All rights reserved</p>
         <a href="https://validator.w3.org/check?uri=referer" referrerpolicy="unsafe-url">Validate</a>
     </footer>
 
